fixed nav bar alignment

--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,17 @@ html, body {
   top: 0;
   z-index: 10;
 }
-.navbar {
+
+.navbar.container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   min-height: 56px;
   position: relative;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
+
 .logo {
   font-weight: 700;
   font-size: 1.45em;
@@ -32,6 +36,7 @@ html, body {
   flex: 1;
   text-align: left;
 }
+
 .nav-links {
   display: flex;
   list-style: none;
@@ -84,10 +89,10 @@ html, body {
 
 @media (max-width: 750px) {
   .container { max-width: 100%; }
-  .navbar {
+  .navbar.container {
     flex-wrap: wrap;
     min-height: 48px;
-    padding: 0.7em 0.3em;
+    padding: 0.7em 1em;  /* changed from 0.7em 0.3em to 0.7em 1em for left/right space */
   }
   .nav-toggle {
     display: block;
@@ -129,8 +134,9 @@ html, body {
 .card-group {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 2.2em;
-  margin-top: 2.5em;   /* Add this line */
+  margin-top: 2.5em;
 }
 
 /* --- Card styles --- */
